pos/client/style/login.css
@font-face {
    font-family: "FontAwesome";
    src: url('../fonts/fontawesome-webfont.eot?v=4.1.0');
    src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.1.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff?v=4.1.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.1.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.1.0#fontawesomeregular') format('svg');
    font-weight: normal;
    font-style: normal;
}

.splash {
    background-image: url( "../img/grocery-shopping.jpg" );
    background-position: center center;
    background-repeat: no-repeat;
    background-size: 100% 100%;
    bottom: 0px;
    left: 0px;
    position: absolute;
    right: 0px;
    top: 0px;
}

.splash .globe {
    bottom: 35px;
    color: white;
    font-family: "FontAwesome";
    font-size: 2em;
    left: 20px;
    opacity: 0;
    position: absolute;
    -webkit-font-smoothing: antialiased;
}

.splash .globe:before {
    content: "\f0ac";
}

.splash .dialog {
    background-color: rgba( 255, 255, 255, 0.60 );
    border-radius: 6px;
    box-shadow: 0px 0px 5px 5px rgba( 0, 0, 0, 0.20 );
    height: 420px;
    position: absolute;
    width: 640px;
}

.splash .dialog .clerk {
    font-size: 4em;
    left: 40px;
    position: absolute;
    top: 20px;
}

.splash .dialog input {
    background-color: white;
    border-radius: 6px;
    color: black;
    font-size: 4em;
    height: 60px;
    left: 40px;
    padding-left: 20px;
    position: absolute;
    right: 40px;
    top: 110px;
}

.splash .dialog .login {
    background-color: #1E8CE2;
    border: 1px solid #0D4E81;
    border-radius: 6px;
    color: white;
    font-size: 4em;
    height: 90px;
    position: absolute;
    right: 40px;
    text-align: center;
    text-shadow: -1px -1px #0D4E81;
    top: 230px;
    width: 220px;
    cursor: default;
}


.splash .dialog .message {
    border: 1px solid rgba( 0, 0, 0, 0.40 );
    border-radius: 6px;
    color: rgba( 0, 0, 0, 0.80 );
    font-size: 1.2em;
    line-height: 1.5em;
    left: 40px;
    padding-bottom: 5px;
    padding-left: 10px;
    padding-top: 5px;
    position: absolute;
    right: 40px;
    top: 350px;
}

